[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "crates/lib" }
anyhow = { version = "1.0.66", features = ["backtrace"] }
thiserror = "1.0.37"

[workspace]
members = ["crates/*"]
