[package]
name = "lib"
version = "0.0.0"
edition = "2021"

[dependencies]
macros = { path = "../macros" }

anyhow = { version = "1.0.66", features = ["backtrace"] }
arrayvec = { version = "0.7.2", default-features = false }
bstr = "1.0.1"
memchr = "2.5.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
