[package]
name = "lib"
version = "0.0.0"
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
macros = { path = "../macros" }

anyhow = { version = "1.0.66", features = ["backtrace"] }
arrayvec = { version = "0.7.2", features = ["std"], default-features = false }
bstr = "1.0.1"
memchr = "2.5.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
num = "0.4.0"
num-bigint = "0.4.3"
log = "0.4.17"
