[package]
name = "lib"
version = "0.0.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(prod)'] }

[features]
default = ["std"]
std = []

[dependencies]
macros = { path = "../macros" }

anyhow = { version = "1.0.66", features = ["backtrace"] }
arrayvec = "0.7.2"
bstr = "1.0.1"
memchr = "2.5.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
num = "0.4.0"
log = "0.4.17"
ringbuffer = "0.10.0"
bittle = "0.6.0"
fixed_heap = "0.3.0"
